--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
                 <section class="hebergements">
                     <h2 class="section-title">Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
-                        <!-- <div class="column-one"> -->
                         <article class="card-hebergement">
                             <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre montrant un lit">
                             <div class="card-content">
@@ -242,53 +241,40 @@
                         <img src="./images/activites/reno-laithienne.jpg" alt="image du vieux-port">
                         <h3 class="card-title">Vieux-Port</h3>
                     </div>
-                    <div class="column-three">
-                        <div class="card-content">
-                            <div class="card-txt">
-                            </div>
-                        </div>
-                        <article class="card-activites-a-marseille">
-                            <div class="card-activites">
-                                <img src="./images/activites/paul-hermann.jpg" alt="image montrant le fort">
-                                <h3 class="card-title">Fort de Pomègues</h3>
-                            </div>
-                            <article class="card-activites-a-marseille">
-                                <div class="card-activites">
-                                    <img src="./images/activites/kilyan-sockalingum.jpg"
-                                        alt="image montrant les calanques">
-                                    <h3 class="card-title">Parc national des Calanques</h3>
-                                </div>
-                                <article class="card-activites-a-marseille">
-                                    <div class="card-activites">
-                                        <img src="./images/activites/florian-wehde.jpg" alt="image montrant notre dame">
-                                        <h3 class="card-title">Notre Dame de la Garde</h3>
-                                    </div>
+                    <div class="card-activites">
+                        <img src="./images/activites/paul-hermann.jpg" alt="image montrant le fort">
+                        <h3 class="card-title">Fort de Pomègues</h3>
+                    </div>
+                    <div class="card-activites">
+                        <img src="./images/activites/kilyan-sockalingum.jpg" alt="image montrant les calanques">
+                        <h3 class="card-title">Parc national des Calanques</h3>
+                    </div>
+                    <div class="card-activites">
+                        <img src="./images/activites/florian-wehde.jpg" alt="image montrant notre dame">
+                        <h3 class="card-title">Notre Dame de la Garde</h3>
                     </div>
                 </article>
             </section>
         </main>
         <footer>
-            <div class="footer">
-                <div class="bloc-footer">
-                    <div class="bloc-a-propos">
-                        <h3>À propos</h3>
-                        <p>Fonctionnement du site</p>
-                        <p>Conditions générales</p>
-                        <p>Données et confidentialité</p>
-                    </div>
-                </div>
-                <div class="bloc-footer">
-                    <h3>Nos hébergements</h3>
-                    <p>Charte qualité</p>
-                    <p>Proposer vôtre hôtel</p>
-                </div>
-                <div class="bloc-footer">
-                    <h3>Assistance</h3>
-                    <p>Centre d'aide</p>
-                    <p>Nous contacter</p>
-                </div>
+            <div class="bloc-footer">
+                <h3>À propos</h3>
+                <p>Fonctionnement du site</p>
+                <p>Conditions générales</p>
+                <p>Données et confidentialité</p>
+            </div>
+            <div class="bloc-footer">
+                <h3>Nos hébergements</h3>
+                <p>Charte qualité</p>
+                <p>Proposer vôtre hôtel</p>
+            </div>
+            <div class="bloc-footer">
+                <h3>Assistance</h3>
+                <p>Centre d'aide</p>
+                <p>Nous contacter</p>
             </div>
         </footer>
     </div>
 </body>
+
 </html>
