--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                     <input type="text" name="q" placeholder="Marseille, France">
                 </div>
                 <div>
-                    <button type="submit">Rechercher</button>
+                    <button type="submit">
+                        <span class="desktop-button"></span>Rechercher
+                        <span class="mobile-button"><i class="fa-solid fa-magnifying-glass"></i></span>
+                    </button>
                 </div>
             </div>
             <div class="filter-bar">
