--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <div class="main-container">
         <header>
-            <img src="./images/logo/Booki.png" alt="logo booki" />
+            <img src="./images/logo/Booki.png" alt="logo booki">
             <nav>
-                <a href="#hebergements">Hébergements</a>
-                <a href="#activites">Activités</a>
+                <a href="#section-title">Hébergements</a>
+                <a href="#activites-marseille-title">Activités</a>
             </nav>
         </header>
 
@@ -29,14 +29,14 @@
             </div>
             <div class="search-bar">
                 <div class="icon-container">
-                    <i class="fa-sharp fa-solid fa-location-dot"></i>
+                    <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <div>
                     <input type="text" name="q" placeholder="Marseille, France">
                 </div>
                 <div>
                     <button type="submit">
-                        <span class="desktop-button"></span>Rechercher
+                        <span class="desktop-button">Rechercher</span>
                         <span class="mobile-button"><i class="fa-solid fa-magnifying-glass"></i></span>
                     </button>
                 </div>
@@ -64,7 +64,7 @@
             </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-                    <h2 class="section-title">Hébergements à Marseille</h2>
+                    <h2 id="section-title">Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
                         <article class="card-hebergement">
                             <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre montrant un lit">
@@ -173,6 +173,7 @@
                                 </div>
                             </div>
                         </article>
+                    </div>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
@@ -238,7 +239,7 @@
                 </section>
             </div>
             <section class="activites-a-marseille">
-                <h2 class="activites-marseille-title">Activités à Marseille</h2>
+                <h2 id="activites-marseille-title">Activités à Marseille</h2>
                 <article class="card-activites-a-marseille">
                     <div class="card-activites">
                         <img src="./images/activites/reno-laithienne.jpg" alt="image du vieux-port">
