menu de navigation corrigé

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <header>
             <img src="./images/logo/Booki.png" alt="logo booki">
             <nav>
-                <a href="#section-title">Hébergements</a>
-                <a href="#activites-marseille-title">Activités</a>
+                <a href="#section-title" class="bar-left">Hébergements</a>
+                <a href="#activites-marseille-title" class="bar-right">Activités</a>
             </nav>
         </header>
 
